--- a/port.html
+++ b/port.html
@@ -11,16 +11,16 @@
       <a href="#" class="logo">Gowtham Elluru</a>
 
       <nav>
-        <a href="#" class="active">Home</a>
+        <a href="#home">Home</a>
         <a href="#">RoadMaps</a>
         <a href="#">Skills</a>
-        <a href="#">Education</a>
+        <a href="#games">Games</a>
         <a href="#">Experience</a>
         <a href="#">Contact</a>
       </nav>
     </header>
 
-    <section class="home">
+    <main class="home" id="home">
       <div class="home-img">
         <img src="image.jpg" alt="" />
       </div>
@@ -49,7 +49,11 @@
           <a href="#" class="btn">Hire Me</a>
         </div>
       </div>
-    </section>
+    </main>
+    <section id="games"><br><br><br><br><br>
+      <u><b><h1 align="center" class="gm">Games</h1></b></u>
+    </section
+    
 
     <script
       type="module"
