--- a/port.html
+++ b/port.html
@@ -35,7 +35,7 @@
             expedita. Laborum eum enim ipsum ea.
           </p>
           <div class="social-icons">
-            <a href="https://www.linkedin.com/in/gowtham-vitap-ba6684326?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><ion-icon name="logo-linkedin"></ion-icon></a>
+            <a href="https://www.linkedin.com/in/gowtham-vitap-ba6684326?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><ion-icon name="logo-linkedin">Linkedin</ion-icon></a>
             <a href="" target="_blank"
               ><ion-icon name="logo-github"></ion-icon
             ></a>
