--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             justify-content: center;
             justify-items: center;
             align-items: center;
-            border: 2px solid black;
-            border-radius: 10%;
+            border: 2px solid red;
+            border-radius: 50%;
             padding: none;
             background-image: url(img.jpg);
             color: white;
